Closed Bug 1307017 Opened 8 years ago Closed 8 years ago

Crash in nsMsgMaildirStore::SetSummaryFileValid

Categories

(MailNews Core :: Database, defect)

Unspecified
Linux
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 52.0

People

(Reporter: wsmwk, Assigned: jorgk-bmo)

References

(Blocks 1 open bug)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file, 1 obsolete file)

Mark got this twice with comments of "I noticed an obsolete subfolder which I had previously deleted (to Trash) was, days later, still in the Trash. So I attempted to delete it from Trash. TBird crashed." and "I was deleting an obsolete subfolder of a dummy account (created while offline). The subfolder had been a non-native 'Sent' folder for an ordinary (non-dummy) account, but I previously deleted the ordinary account. I had to use the folderflags addon to get the subfolder to be deletable (non-'Sent'), but I got this crash -- see bugzilla 1277771." bp-7e844724-a70f-4ee2-b927-4e1752160603 and bp-0a147223-7caf-433e-97a3-a5c0d2160606. ============================================================= 0 libxul.so nsMsgMaildirStore::SetSummaryFileValid /build/thunderbird-NA7lWo/thunderbird-38.6.0+build1/mailnews/local/src/nsMsgMaildirStore.cpp:319 1 libxul.so nsMailDatabase::SetSummaryValid /build/thunderbird-NA7lWo/thunderbird-38.6.0+build1/mailnews/db/msgdb/src/nsMailDatabase.cpp:133 2 libxul.so MaildirStoreParser::TimerCallback /build/thunderbird-NA7lWo/thunderbird-38.6.0+build1/mailnews/local/src/nsMsgMaildirStore.cpp:1230 3 libxul.so nsTimerImpl::Fire /build/thunderbird-NA7lWo/thunderbird-38.6.0+build1/mozilla/xpcom/threads/nsTimerImpl.cpp:625
Attached patch 1307017.patch (obsolete) — Splinter Review
Drive-by patch ;-) You could argue about the return code if the folder info is returned null.
Attachment #8800003 - Flags: review?(rkent)
Comment on attachment 8800003 [details] [diff] [review] 1307017.patch Review of attachment 8800003 [details] [diff] [review]: ----------------------------------------------------------------- "You could argue about the return code if the folder info is returned null." You could, and I think that I will. Do you have STR of where this error is expected to occur, and it is known that we should ignore it? I don't, so at the very least we should report it in debug builds. So rather than your change, I would prefer an NS_ENSURE_STATE(dbFolderInfo) instead of your fix. If you agree, then just add that one line and throw away your fix with my r+ of that version.
Attachment #8800003 - Flags: review?(rkent) → review-
Doing at according to Kent's instructions earns me an r+ ;-)
Attachment #8800003 - Attachment is obsolete: true
Attachment #8800437 - Flags: review+
Assignee: nobody → jorgk
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 8 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 52.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: