Bug 1307017 - Don't crash on folder info being null. r=rkent